# mcp-aiops-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  refactor_request.md
.github/workflows/: deploy.yml
docs/: erd.md  mcp-client-contract.md  sre-agent-security-policy.md
infra/docker/alertmanager-test/: alertmanager.yml  docker-compose.yml  prometheus.yml  rules.yml
infra/k8s/: configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  rbac.yaml  rca-due-job-cronjob.yaml  secret.example.yaml  service.yaml  serviceaccount.yaml
src/aiops_platform/: __init__.py  main.py
src/aiops_platform/admin_riskops/: __init__.py  repository.py  schemas.py  service.py
src/aiops_platform/agent/: __init__.py  context_bundle.py  (+4 more)
tests/: conftest.py  seed_constants.py  test_admin_riskops_service.py  test_agent_orchestration.py  test_alertmanager_agent.py  test_api_orchestration.py  test_client_contract.py  test_config.py  test_farm_advisory_service.py  test_farmer_bnpl_service.py  test_fastmcp_server.py  test_health.py  test_infra_rca_service.py  test_infraops_service.py  test_llmops_api.py  test_llmops_client.py  test_llmops_repository.py  test_mcp_audit.py  test_mcp_masking.py  test_mcp_models.py  test_mcp_policy.py  test_mcp_registry.py  test_ops_report_email_delivery.py  test_ops_reports_service.py  test_prediction_scaling_service.py  test_topology_knowledge_service.py
tests/seed/: ci_schema.sql  local_dummy.sql
(+68 files in other folders)
